--- a/examples/config/training/default.yaml
+++ b/examples/config/training/default.yaml
@@ -11,5 +11,5 @@ weight_decay: 0.01
 use_onecycle: True
 growth_phases: 0
 tune_direction: True
-tune_new_parts: True
+tune_step_size: True
 selection_method: "firefly"
