--- a/examples/config/model/grow_start.yaml
+++ b/examples/config/model/grow_start.yaml
@@ -1,5 +1,7 @@
 type: growing
 config:
   loss_on_all_tokens: True
-  intermediate_size: 256
+  intermediate_size: 768
+  num_hidden_layers: 3
+  d_head: 28
 tokenizer: "bert-base-cased"
