--- a/examples/config/model/grow_start.yaml
+++ b/examples/config/model/grow_start.yaml
@@ -3,5 +3,6 @@ config:
   loss_on_all_tokens: True
   intermediate_size: 768
   num_hidden_layers: 3
+  num_heads: 3
   d_head: 28
 tokenizer: "bert-base-cased"
