Fixed an issue with growing attention heads

--- a/examples/config/training/schedule/growing.yaml
+++ b/examples/config/training/schedule/growing.yaml
@@ -19,11 +19,6 @@ growth_phase_a:
     split: False
     num_novel: 4
     num_keep: 1
-  # grow heads second to last
-  - match: .layer.[0-9]+
-    split: False
-    num_novel: 4
-    num_keep: 1
   # encoder should be grown last, so that new layers are not grown (otherwise there are conflicts)
   - match: .encoder
     split: True
@@ -36,7 +31,7 @@ growth_phase_b:
     split: True
     num_novel: 265
     num_keep: 256
-  - match: .attention
+  - match: .attention.output
     # since there is no activation function bewtween the value and output layer
     # the split direction would just cancel out
     split: False
@@ -46,7 +41,7 @@ growth_phase_b:
     split: False  # splitting up key and query is equivalent to just adding new neurons
     num_novel: 32
     num_keep: 8
-  - match: .layer.[0-9]+
+  - match: .attention
     split: False
     num_novel: 4
     num_keep: 1
