--- a/examples/config/training/growing.yaml
+++ b/examples/config/training/growing.yaml
@@ -13,12 +13,11 @@ growth_phases: 0
 tune_direction: True
 tune_step_size: True
 selection_method: "firefly"
-grow_data_split: 0.1
+grow_data_portion: 0.1
 grow_tune_params:
   batch_size: 32
   gca_batches: 8
   use_onecycle: True
-  lr: 1e-3
-  momentum: 0.1
-  alpha: 0.9
-  weight_decay: 0.2
+  lr: 6e-4
+  weight_decay: 0.01
+  betas: [0.9, 0.98]
