--- a/examples/config/experiment/growing_param_search.yaml
+++ b/examples/config/experiment/growing_param_search.yaml
@@ -1,7 +1,9 @@
 # @package _global_
 
 defaults:
-  - override /dataset: wiki_small
+  - _self_
+  - override /datasets:
+    - wiki_big
   - override /model: grow_start
   - override /training: growing
   - override /training/schedule: growing_single_step
