--- a/examples/config/experiment/growing_small.yaml
+++ b/examples/config/experiment/growing_small.yaml
@@ -1,6 +1,8 @@
 # @package _global_
 
 defaults:
-  - override /dataset: wiki_small
+  - _self_
+  - override /datasets:
+    - wiki_small
   - override /model: grow_start
   - override /training: growing
