--- a/examples/config/training/growing.yaml
+++ b/examples/config/training/growing.yaml
@@ -2,14 +2,15 @@ defaults:
   - schedule: growing
 
 device: "cuda:0"
-learning_rate: 0.1
-batch_size: 64
-gca_batches: 4
+learning_rate: 1e-4
+batch_size: 128
+gca_batches: 2
 betas: [0.9, 0.98]
 eps: 1e-06
 weight_decay: 0.01
 use_onecycle: True
 growth_phases: 0
+mlm_probability: 0.15
 tune_direction: True
 tune_step_size: True
 selection_method: "firefly"
@@ -20,4 +21,6 @@ grow_tune_params:
   use_onecycle: True
   lr: 6e-4
   weight_decay: 0.01
-  betas: [0.9, 0.98]
+  betas:
+    - 0.9
+    - 0.98
