--- a/examples/config/training/static.yaml
+++ b/examples/config/training/static.yaml
@@ -2,7 +2,7 @@ defaults:
   - schedule: static
 
 device: "cuda:0"
-learning_rate: 0.1
+learning_rate: 5e-5
 batch_size: 64
 gca_batches: 4
 betas: [0.9, 0.98]
@@ -10,8 +10,9 @@ eps: 1e-06
 weight_decay: 0.01
 use_onecycle: True
 growth_phases: 0
+mlm_probability: 0.15
 tune_direction: True
 tune_step_size: True
 selection_method: "firefly"
-grow_data_split: 0
+grow_data_portion: 0.1
 grow_tune_params: {}
