Implemented option to checkpoint models

--- a/examples/config/training/schedule/growing.yaml
+++ b/examples/config/training/schedule/growing.yaml
@@ -56,30 +56,35 @@ growth_phase_b:
 steps:
   - train:
       num_epochs: ${training.schedule.training_epochs}
+  - checkpoint
   - grow: ${training.schedule.growth_phase_a}
   - train:
       num_epochs: ${training.schedule.training_epochs}
   - grow: ${training.schedule.growth_phase_a}
   - train:
       num_epochs: ${training.schedule.training_epochs}
+  - checkpoint
   - grow: ${training.schedule.growth_phase_a}
   - train:
       num_epochs: ${training.schedule.training_epochs}
   - grow: ${training.schedule.growth_phase_a}
   - train:
       num_epochs: ${training.schedule.training_epochs}
+  - checkpoint
   - grow: ${training.schedule.growth_phase_b}
   - train:
       num_epochs: ${training.schedule.training_epochs}
   - grow: ${training.schedule.growth_phase_b}
   - train:
       num_epochs: ${training.schedule.training_epochs}
+  - checkpoint
   - grow: ${training.schedule.growth_phase_b}
   - train:
       num_epochs: ${training.schedule.training_epochs}
   - grow: ${training.schedule.growth_phase_b}
   - train:
       num_epochs: ${training.schedule.training_epochs}
+  - checkpoint
   - grow: ${training.schedule.growth_phase_b}
   - train:
       num_epochs: ${training.schedule.training_epochs}
