--- a/examples/config/training/schedule/static.yaml
+++ b/examples/config/training/schedule/static.yaml
@@ -1,5 +1,8 @@
 num_epochs: 30
 
 steps:
+  - lr_scheduler:
+      type: linear
+      warump: 0.06
   - train:
       num_epochs: ${training.schedule.num_epochs}
