Made warmup more flexibel

--- a/examples/config/training/schedule/growing.yaml
+++ b/examples/config/training/schedule/growing.yaml
@@ -72,7 +72,7 @@ growth_phase_b:
 steps:
   - lr_scheduler:
       type: linear
-      warmup: 0.06
+      warmup_steps: 10000
   - train:
       num_epochs: ${training.schedule.training_epochs}
   - checkpoint
