--- a/examples/config/training/static.yaml
+++ b/examples/config/training/static.yaml
@@ -1,5 +1,6 @@
 defaults:
   - schedule: static
+  - _self_
 
 device: "cuda:0"
 learning_rate: 5e-5
@@ -8,7 +9,7 @@ gca_batches: 4
 betas: [0.9, 0.98]
 eps: 1e-06
 weight_decay: 0.01
-growth_phases: 0
+gradient_clipping: 1.0
 mlm_probability: 0.15
 tune_direction: True
 tune_step_size: True
