--- a/examples/config/experiment/growing_normal.yaml
+++ b/examples/config/experiment/growing_normal.yaml
@@ -3,22 +3,26 @@
 defaults:
   - override /datasets:
       - wiki_big
+      - bookcorpus
   - override /model: grow_start
   - override /training: growing
   - _self_
 
+
+
+
 training:
+  batch_size: 128
+  gca_batches: 32
+  learning_rate: 1e-3
 
-  batch_size: 16
-  gca_batches: 16
-  learning_rate: 1e-4
   weight_decay: 0.01
-  betas: [0.9, 0.999]
-
-  schedule:
-    training_epochs: 3
+  betas: [0.9, 0.98]
 
   grow_tune_params:
-    learning_rate: 1e-2
     weight_decay: 0.01
-    betas: [0.9, 0.999]
+    betas: [0.9, 0.98]
+    batch_size: 128
+    gca_batches: 32
+
+max_seq_length: 128
