--- a/examples/config/training/growing.yaml
+++ b/examples/config/training/growing.yaml
@@ -8,17 +8,16 @@ gca_batches: 2
 betas: [0.9, 0.98]
 eps: 1e-06
 weight_decay: 0.01
-gradient_clipping: 1.0
 mlm_probability: 0.15
 tune_direction: True
 tune_step_size: True
 selection_method: "firefly"
 grow_data_portion: 0.1
 grow_tune_params:
-  batch_size: 32
-  gca_batches: 8
-  use_onecycle: True
-  learning_rate: 6e-4
+  grow_select_portion: 0.1
+  batch_size: 64
+  gca_batches: 64
+  learning_rate: 2e-3
   weight_decay: 0.01
   betas:
     - 0.9
