--- a/examples/config/training/schedule/growing.yaml
+++ b/examples/config/training/schedule/growing.yaml
@@ -1,12 +1,12 @@
-training_epochs: 2
+training_epochs: 1
 
 tune_params:
   direction:
     lr: 5e-3
   step_size:
-    lr: 1e-3
+    lr: 2e-3
 
-growth_phase_a:
+growth_phase:
   - match: .mlp
     split: True
     num_novel: 265
@@ -37,73 +37,43 @@ growth_phase_a:
     tune_params: ${training.schedule.tune_params}
 
 
-growth_phase_b:
-  - match: .mlp
-    split: True
-    num_novel: 265
-    num_keep: 256
-    tune_params: ${training.schedule.tune_params}
-  - match: .attention.output
-    # since there is no activation function bewtween the value and output layer
-    # the split direction would just cancel out
-    split: False
-    num_novel: 16
-    num_keep: 4
-    tune_params: ${training.schedule.tune_params}
-  - match: .dot_product
-    split: False  # splitting up key and query is equivalent to just adding new neurons
-    num_novel: 16
-    num_keep: 4
-    tune_params: ${training.schedule.tune_params}
-  - match: .attention
-    split: False
-    num_novel: 4
-    num_keep: 1
-    tune_params: ${training.schedule.tune_params}
-  - match: .encoder
-    split: True
-    num_novel: 0
-    num_keep: 1
-    tune_params: ${training.schedule.tune_params}
-
-
 
 
 steps:
   - lr_scheduler:
       type: linear
-      warmup_steps: 10000
+      warmup_portion: 0.06
   - train:
       num_epochs: ${training.schedule.training_epochs}
   - checkpoint
-  - grow: ${training.schedule.growth_phase_a}
+  - grow: ${training.schedule.growth_phase}
   - train:
       num_epochs: ${training.schedule.training_epochs}
-  - grow: ${training.schedule.growth_phase_a}
-  - train:
-      num_epochs: ${training.schedule.training_epochs}
-  - checkpoint
-  - grow: ${training.schedule.growth_phase_a}
-  - train:
-      num_epochs: ${training.schedule.training_epochs}
-  - grow: ${training.schedule.growth_phase_a}
+  - grow: ${training.schedule.growth_phase}
   - train:
       num_epochs: ${training.schedule.training_epochs}
   - checkpoint
-  - grow: ${training.schedule.growth_phase_b}
+  - grow: ${training.schedule.growth_phase}
   - train:
       num_epochs: ${training.schedule.training_epochs}
-  - grow: ${training.schedule.growth_phase_b}
-  - train:
-      num_epochs: ${training.schedule.training_epochs}
-  - checkpoint
-  - grow: ${training.schedule.growth_phase_b}
-  - train:
-      num_epochs: ${training.schedule.training_epochs}
-  - grow: ${training.schedule.growth_phase_b}
+  - grow: ${training.schedule.growth_phase}
   - train:
       num_epochs: ${training.schedule.training_epochs}
   - checkpoint
-  - grow: ${training.schedule.growth_phase_b}
+  - grow: ${training.schedule.growth_phase}
+  - train:
+      num_epochs: ${training.schedule.training_epochs}
+  - grow: ${training.schedule.growth_phase}
+  - train:
+      num_epochs: ${training.schedule.training_epochs}
+  - checkpoint
+  - grow: ${training.schedule.growth_phase}
+  - train:
+      num_epochs: ${training.schedule.training_epochs}
+  - grow: ${training.schedule.growth_phase}
+  - train:
+      num_epochs: ${training.schedule.training_epochs}
+  - checkpoint
+  - grow: ${training.schedule.growth_phase}
   - train:
       num_epochs: ${training.schedule.training_epochs}
