--- a/examples/config/training/schedule/static.yaml
+++ b/examples/config/training/schedule/static.yaml
@@ -1,18 +1,8 @@
+num_epochs: num_epochs
+
 steps:
   - lr_scheduler:
       type: linear
       warmup_portion: 0.06
   - train:
-      num_epochs: 2
-  - checkpoint
-  - train:
-      num_epochs: 2
-  - checkpoint
-  - train:
-      num_epochs: 2
-  - checkpoint
-  - train:
-      num_epochs: 2
-  - checkpoint
-  - train:
-      num_epochs: 2
+      num_epochs: training.num_epochs
