--- a/examples/config/experiment/growing_param_search.yaml
+++ b/examples/config/experiment/growing_param_search.yaml
@@ -22,7 +22,16 @@ training:
   grow_tune_params:
     weight_decay: 0.01
     betas: [0.9, 0.98]
-    batch_size: 128
-    gca_batches: 32
+    batch_size: 64
+    gca_batches: 64
 
 max_seq_length: 128
+
+
+model:
+  config:
+    intermediate_size: 2304
+    num_hidden_layers: 9
+    num_heads: 9
+    d_head: 52
+    step_size: 1e-2
