--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ exclude = '''
 flake8-max-line-length = 210
 flake8-ignore = ["E203", "W503"]  # See https://github.com/PyCQA/pycodestyle/issues/373
 addopts = "-W error --flake8 --mypy --isort"
+markers = [
+    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+]
 
 [tool.mypy]
 ignore_missing_imports = true
